--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         document.getElementById('checkin-form').addEventListener('submit', function(event) {
             event.preventDefault();
             document.getElementById('form-container').style.display = 'none';
-            document.getElementById('thank-you-message').classList.remove('hidden');
+            document.getElementById('thank-you-message').style.display = 'block';
         });
     </script>
 </body>
