--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
         (function(){
-            emailjs.init("VOTRE_USER_ID"); // Remplacez par votre User ID EmailJS
+            emailjs.init("chauvin"); // Remplacez par votre User ID EmailJS
         })();
     </script>
     <style>
@@ -83,8 +83,6 @@
             <input type="text" id="nom" name="nom" required>
             <label for="email">Email :</label>
             <input type="email" id="email" name="email" required>
-            <label for="nombre_occupants">Nombre d'occupants :</label>
-            <input type="number" id="nombre_occupants" name="nombre_occupants" min="1" required>
             <label for="date_entree">Date d’entrée :</label>
             <input type="date" id="date_entree" name="date_entree" required>
             <script>
@@ -119,20 +117,19 @@
             doc.text("Confirmation de Check-in", 10, 10);
             doc.text("Nom: " + document.getElementById('nom').value, 10, 20);
             doc.text("Email: " + document.getElementById('email').value, 10, 30);
-            doc.text("Nombre d'occupants: " + document.getElementById('nombre_occupants').value, 10, 40);
-            doc.text("Date d’entrée: " + document.getElementById('date_entree').value, 10, 50);
-            doc.text("Date de départ: " + document.getElementById('date_depart').value, 10, 60);
-            doc.text("Commentaire: " + document.getElementById('commentaire').value, 10, 70);
-            doc.text("Date de signature: " + document.getElementById('date_signature').value, 10, 80);
+            doc.text("Date d’entrée: " + document.getElementById('date_entree').value, 10, 40);
+            doc.text("Date de départ: " + document.getElementById('date_depart').value, 10, 50);
+            doc.text("Commentaire: " + document.getElementById('commentaire').value, 10, 60);
+            doc.text("Date de signature: " + document.getElementById('date_signature').value, 10, 70);
             let canvas = document.getElementById('signature-pad');
             let imgData = canvas.toDataURL("image/png");
-            doc.addImage(imgData, 'PNG', 10, 90, 50, 20);
+            doc.addImage(imgData, 'PNG', 10, 80, 50, 20);
             let pdfData = doc.output("datauristring");
             sendEmail(pdfData);
         }
         
         function sendEmail(pdfData) {
-            emailjs.send("VOTRE_SERVICE_ID", "VOTRE_TEMPLATE_ID", {
+            emailjs.send("service_l3ldvzh", "template_kvmrixn", {
                 nom: document.getElementById('nom').value,
                 email: document.getElementById('email').value,
                 date_entree: document.getElementById('date_entree').value,
