--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenue à la maison</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script>
-        (function(){
-            emailjs.init("chauvin");
-        })();
+        const GOOGLE_SHEET_URL = "VOTRE_WEBHOOK_URL"; // Remplacez par l'URL de votre Apps Script déployé
     </script>
     <style>
         body {
@@ -64,19 +60,6 @@
             cursor: pointer;
             width: 48%;
         }
-        canvas {
-            border: 1px solid #bbb;
-            width: 100%;
-            height: 150px;
-            background-color: #e0e0e0;
-            touch-action: none;
-            display: block;
-        }
-        #email-error {
-            color: red;
-            font-size: 12px;
-            display: none;
-        }
         .hidden {
             display: none;
         }
@@ -91,7 +74,8 @@
             <input type="text" id="nom" name="nom" required>
             <label for="email">Email :</label>
             <input type="email" id="email" name="email" required>
-            <span id="email-error">Veuillez entrer une adresse email valide.</span>
+            <label for="nombre_occupants">Nombre d'occupants :</label>
+            <input type="number" id="nombre_occupants" name="nombre_occupants" min="1" required>
             <label for="date_entree">Date d’entrée :</label>
             <input type="date" id="date_entree" name="date_entree" required>
             <script>
@@ -123,31 +107,32 @@
     <script>
         document.getElementById('checkin-form').addEventListener('submit', function(event) {
             event.preventDefault();
-            generatePDF();
+            sendToGoogleSheets();
         });
 
-        function generatePDF() {
-            const { jsPDF } = window.jspdf;
-            let doc = new jsPDF();
-            doc.text("Confirmation de Check-in", 10, 10);
-            doc.text("Nom: " + document.getElementById('nom').value, 10, 20);
-            doc.text("Email: " + document.getElementById('email').value, 10, 30);
-            doc.text("Date d’entrée: " + document.getElementById('date_entree').value, 10, 40);
-            doc.text("Date de départ: " + document.getElementById('date_depart').value, 10, 50);
-            let pdfData = doc.output("datauristring");
-            sendEmail(pdfData);
-        }
-
-        function sendEmail(pdfData) {
-            emailjs.send("VOTRE_SERVICE_ID", "VOTRE_TEMPLATE_ID", {
+        function sendToGoogleSheets() {
+            const formData = {
+                nom: document.getElementById('nom').value,
                 email: document.getElementById('email').value,
-                pdf_attachment: pdfData
-            }).then(function(response) {
+                nombre_occupants: document.getElementById('nombre_occupants').value,
+                date_entree: document.getElementById('date_entree').value,
+                date_depart: document.getElementById('date_depart').value,
+                commentaire: document.getElementById('commentaire').value,
+                date_signature: document.getElementById('date_signature').value,
+                signature: document.getElementById('signature-pad').toDataURL()
+            };
+            fetch(GOOGLE_SHEET_URL, {
+                method: "POST",
+                mode: "no-cors",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(formData)
+            }).then(() => {
                 document.getElementById('form-container').classList.add('hidden');
                 document.getElementById('thank-you-message').classList.remove('hidden');
-                alert("Email envoyé avec succès!");
-            }, function(error) {
-                alert("Erreur lors de l'envoi: " + error.text);
+            }).catch(error => {
+                alert("Erreur d'envoi des données : " + error);
             });
         }
     </script>
