--- a/index.html
+++ b/index.html
@@ -129,10 +129,26 @@
                 emailField.setCustomValidity("");
             }
         });
+        
+        let canvas = document.getElementById('signature-pad');
+        let ctx = canvas.getContext('2d');
+        let drawing = false;
 
+        canvas.addEventListener('mousedown', (e) => {
+            drawing = true;
+            ctx.beginPath();
+            ctx.moveTo(e.offsetX, e.offsetY);
+        });
+        canvas.addEventListener('mousemove', (e) => {
+            if (!drawing) return;
+            ctx.lineTo(e.offsetX, e.offsetY);
+            ctx.stroke();
+        });
+        canvas.addEventListener('mouseup', () => {
+            drawing = false;
+        });
+        
         function clearSignature() {
-            let canvas = document.getElementById('signature-pad');
-            let ctx = canvas.getContext('2d');
             ctx.clearRect(0, 0, canvas.width, canvas.height);
         }
     </script>
